password & name to Hikari